tests/invalid/Final_Invalid_10.whiley
function f(int x) -> (int r):
    //
    final int y
    //
    y = x
    //    
    if x >= 0:
        y = y + 1
    //
    return y